# lane_detection_YOLOP

./: .gitignore  README.md  main.py  pyproject.toml
source/: demo.py
web/backend/: pyproject.toml
web/backend/app/: config.py  inference.py  main.py
web/frontend/src/: index.css
