[project]
name = "yolopv2-backend"
version = "0.1.0"
description = "YOLOPv2 lane-detection FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "torch>=2.11",
    "torchvision>=0.26",
    "opencv-python>=4.13",
    "numpy>=2.0",
]
